@@ -311,6 +311,13 @@ function GetFullIconTable(icon, icons) -- check what all the possible icons it c
 	return icon.CompiledIcons
 end
 
+function Type:OnGCD(duration)
+	if not icon.__metaModuleSource then
+		return false
+	end
+	
+	return icon.__metaModuleSource.typeData:OnGCD(duration)
+end
 
 function Type:Setup(icon)
 	icon.__currentIcon = nil -- reset this
